Bug 71452 - window list uses wrong colors
Summary: window list uses wrong colors
Status: CLOSED FIXED
Alias: None
Product: kdesktop
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2003-12-29 21:46 UTC by Janis Blechert
Modified: 2009-01-02 20:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
the problem are the blue stripes above each 'Desktop #' (20.02 KB, image/png)
2004-05-11 15:12 UTC, Janis Blechert
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Janis Blechert 2003-12-29 21:46:45 UTC
Version:           unknown (using KDE 3.1.94 (CVS >= 20031206), compiled sources)
Compiler:          gcc version 3.2.3
OS:          Linux (i686) release 2.6.0

the window list (middle click on desktop) uses wrong colors in the 'Desktop X' rows, the dark shadow is either 'Selected Background' or one of the Active Title Bar-Colors, should be dark grey to match the light shadow and main color
Comment 1 Janis Blechert 2004-05-11 15:12:24 UTC
Created attachment 5941 [details]
the problem are the blue stripes above each 'Desktop #'
Comment 2 Maksim Orlovich 2004-11-19 18:03:07 UTC
I think the extra line got removed a bit back, will check
Comment 3 Andreas Kling 2006-07-26 16:08:15 UTC
SVN commit 566543 by kling:

Don't draw a highlighting line above KPopupMenu title sections.
It looks very out-of-place, especially when using styles with rounded PE_HeaderSections.

BUG: 71452


 M  +0 -3      kpopupmenu.cpp  


--- branches/KDE/3.5/kdelibs/kdeui/kpopupmenu.cpp #566542:566543
@@ -108,9 +108,6 @@
                        AlignCenter | SingleLine, titleStr);
         }
     }
-
-    p.setPen(palette().active().highlight());
-    p.drawLine(0, 0, r.right(), 0);
 }
 
 QSize KPopupTitle::sizeHint() const
Comment 4 FiNeX 2009-01-02 20:26:31 UTC
Bug closed. Kdesktop is no more mantained.