Don't draw a highlighting line above KPopupMenu title sections. It looks very out-of-place, especially when using styles with rounded PE_HeaderSections.

BUG: 71452

svn path=/branches/KDE/3.5/kdelibs/; revision=566543